--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <!-- 设置浏览器图标 -->
-    <link rel="icon" href="/logo.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/logo.ico" type="image/x-icon" />
+    <link rel="icon" href="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/logo.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/logo.ico" type="image/x-icon" />
     <!-- 主题 -->
-    <link rel="stylesheet" href="/css/vue.css">
+    <link rel="stylesheet" href="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/css/vue.css">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css"> -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css"> -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-defaults.css"> -->
@@ -65,19 +65,19 @@
 
 
     <!-- docsify的js依赖 -->
-    <script src="/js/docsify.min.js"></script>
+    <script src="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/js/docsify.min.js"></script>
     <!-- emoji表情支持 -->
-    <script src="/js/emoji.min.js"></script>
+    <script src="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/js/emoji.min.js"></script>
     <!-- 图片放大缩小支持 -->
-    <script src="/js/zoom-image.min.js"></script>
+    <script src="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/js/zoom-image.min.js"></script>
     <!-- 搜索功能支持 -->
-    <script src="/js/search.min.js"></script>
+    <script src="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/js/search.min.js"></script>
     <!--在所有的代码块上添加一个简单的Click to copy按钮来允许用户从你的文档中轻易地复制代码-->
-    <script src="/js/docsify-copy-code.min.js"></script>
+    <script src="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/js/docsify-copy-code.min.js"></script>
     <!--分页导航，在文档的最下方会展示上一个文档和下一个文档-->
-    <script src="/js/docsify-pagination.min.js"></script>
+    <script src="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/js/docsify-pagination.min.js"></script>
     <!-- 阅读时间 -->
-    <script src="/js/countable.js"></script>
+    <script src="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/js/countable.js"></script>
 
 
     <!-- 网站51la统计 -->
