--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 
 
     <!-- 网站51la统计 -->
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>LA.init({id: "JjSLTv6e5e7N6EIk",ck: "JjSLTv6e5e7N6EIk"})</script>
 
 </body>
 
