--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <!-- 设置浏览器图标 -->
-    <link rel="icon" href="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/logo.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/logo.ico" type="image/x-icon" />
+    <link rel="icon" href="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/logo.png" type="image/x-icon" />
     <!-- 主题 -->
     <link rel="stylesheet" href="https://stlcdn.letsdown.cn/gh/awaitla/HotAPIWiki/main/css/vue.css">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css"> -->
