--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-cn">
 
 <head>
+    <meta name="referrer" content="never">
     <meta charset="UTF-8">
     <title>HotAPI Wiki</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
